--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "webpack serve --open",
     "build": "webpack --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
+    "format": "prettier --no-cache --write src/**/*.{js,jsx,ts,tsx}",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
